--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,12 @@
     "iron-media-query": "PolymerElements/iron-media-query#^1.0.0",
     "iron-pages": "PolymerElements/iron-pages#^1.0.0",
     "iron-selector": "PolymerElements/iron-selector#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.0",
+    "paper-icon-button": "^1.1.4",
     "polymer": "Polymer/polymer#^1.6.0",
-    "paper-button": "^1.0.14"
+    "paper-button": "^1.0.14",
+    "paper-dialog": "^1.1.0",
+    "paper-menu-button": "^1.5.2",
+    "paper-item": "^1.2.1"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
