Fixed the firebase config to target all urls to index.html

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,15 @@
 {
   "hosting": {
-    "public": "build/bundled",
-    "rewrites": [
-      {
-	"source": "**/!{*.*}",
-        "destination": "/index.html"
-      }
-    ]
+      "public": "build/bundled",
+      "rewrites": [
+	  {
+	      "source": "!/__/**",
+	      "destination": "/index.html"
+	  },
+	  {
+	      "source": "**/!(*.js|*.html|*.css|*.json|*.svg|*.png|*.jpg|*.jpeg)",
+	      "destination": "/index.html"
+	  }
+      ]
   }
 }
