--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "paper-button": "^1.0.14",
     "paper-dialog": "^1.1.0",
     "paper-menu-button": "^1.5.2",
-    "paper-item": "^1.2.1"
+    "paper-item": "^1.2.1",
+    "paper-menu": "^1.2.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
